<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/cardview_dark_background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        tools:layout_editor_absoluteY="194dp" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/username"
        />

    <EditText
        android:id="@+id/repassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="@string/password"
        android:hint="@string/retype_password"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password"
        />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_below="@+id/repassword"
        android:layout_marginTop="50dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_page"
        android:layout_below="@+id/btnsignup"
        android:layout_marginTop="50dp"
        android:gravity="center"
        />

</RelativeLayout>